# Carmel

./: .gitignore  Carmel.py  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml
carmel/: __init__.py  config.py  logger.py  paths.py  version.py
carmel/adapters/: __init__.py  t3.py
carmel/schemas/: __init__.py  approval.py  campaign.py  diagnostics.py  plan.py  run.py  state.py
carmel/services/: __init__.py  approvals.py  artifacts.py  campaigns.py  decision_log.py  drawing.py  execution.py  intake.py  planner.py  provenance.py  state_machine.py
carmel/ui/: __init__.py  app.py
carmel/ui/static/: style.css
carmel/ui/templates/: _pill.html  base.html  campaign_create.html  campaign_dashboard.html  index.html
docs/: architecture.md  development.md  index.md
tests/: conftest.py  test_Carmel.py  test_config.py  test_logger.py  test_paths.py  test_schemas.py  test_services.py  test_t3_adapter.py  test_ui.py  test_version.py
tests/fixtures/t3/: README.md
